--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@iconify-json/lucide": "^1.2.87",
     "@iconify-json/simple-icons": "^1.2.68",
     "@nuxt/ui": "^4.4.0",
+    "@vueuse/motion": "^3.0.3",
     "nuxt": "^4.2.2",
     "tailwindcss": "^4.1.18"
   },
